# ai-bom-goof

./: .gitignore  README.md  blip.py  chat.py  main.py  pyproject.toml  whisper.py
.devcontainer/: devcontainer.json
mcp/: README.md  mcp-client.py  mcp-server.py
