[project]
name = "aibom-goof"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "mcp>=1.23.1",
    "openai>=2.8.1",
    "openai-agents>=0.6.2",
    "pillow>=12.0.0",
    "requests>=2.32.5",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
